tests/ui/invalid_pyfunctions.stderr
error: Python functions cannot have generic type parameters
 --> tests/ui/invalid_pyfunctions.rs:6:21
  |
6 | fn generic_function<T>(_value: T) {}
  |                     ^

error: Python functions cannot have `impl Trait` arguments
 --> tests/ui/invalid_pyfunctions.rs:9:37
  |
9 | fn impl_trait_function(_impl_trait: impl AsRef<PyAny>) {}
  |                                     ^^^^^^^^^^^^^^^^^

error: wildcard argument names are not supported
  --> tests/ui/invalid_pyfunctions.rs:12:22
   |
12 | fn wildcard_argument(_: i32) {}
   |                      ^

error: destructuring in arguments is not supported
  --> tests/ui/invalid_pyfunctions.rs:15:26
   |
15 | fn destructured_argument((_a, _b): (i32, i32)) {}
   |                          ^^^^^^^^

error: args cannot be optional
  --> tests/ui/invalid_pyfunctions.rs:19:32
   |
19 | fn function_with_optional_args(args: Option<Bound<'_, PyTuple>>) {
   |                                ^^^^

error: kwargs must be Option<_>
  --> tests/ui/invalid_pyfunctions.rs:25:34
   |
25 | fn function_with_required_kwargs(kwargs: Bound<'_, PyDict>) {
   |                                  ^^^^^^

error: expected `&PyModule` or `Py<PyModule>` as first argument with `pass_module`
  --> tests/ui/invalid_pyfunctions.rs:30:37
   |
30 | fn pass_module_but_no_arguments<'py>() {}
   |                                     ^^

error[E0277]: the trait bound `&str: From<BoundRef<'_, '_, pyo3::types::PyModule>>` is not satisfied
  --> tests/ui/invalid_pyfunctions.rs:34:14
   |
34 |     _string: &str,
   |              ^^^^ the trait `From<BoundRef<'_, '_, pyo3::types::PyModule>>` is not implemented for `&str`
   |
   = help: the following other types implement trait `From<T>`:
             `String` implements `From<&String>`
             `String` implements `From<&mut str>`
             `String` implements `From<&str>`
             `String` implements `From<Box<str>>`
             `String` implements `From<Cow<'_, str>>`
             `String` implements `From<char>`
   = note: required for `BoundRef<'_, '_, pyo3::types::PyModule>` to implement `Into<&str>`
